2006-01-17  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* POTFILES.in: Added the +256k related source files.

	* nl.po: Updated.

2006-01-16  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

	* POTFILES.in: Added `src/arch/unix/x11/gnome/uifileentry.c',
	Removed `src/arch/unix/x11/gnome/dummies.c'.

2006-01-15  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* POTFILES.in: Added PET REU related files.

2006-01-08  Andreas Boose  <viceteam@t-online.de>

	* it.po: Reverted some multi byte changes.

2006-01-08  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* it.po: Italian translations update.

	* nl.po: Fixed a typo.

2006-01-07  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* de.po, nl.po: Updated and fixed some translations.

2006-01-06  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

2006-01-01  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* nl.po: Fixed some more translations.

2006-01-01  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* nl.po: Updated 2005 to 2006.

2005-12-30  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* nl.po: Updated and synchronized with the already present
	dutch translations in the win32 .rc files.

2005-12-30  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

2005-12-28  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

2005-12-28  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* nl.po: Updated the dutch translations and fixed a typo.

2005-12-24  pottendo  <pottendo@utanet.at>

	* de.po: Updated.

2005-12-24  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* POTFILES.in: Added the generic unix netplay ui
	(arch/unix/uinetplay.c) to the list.

2005-12-23  pottendo  <pottendo@utanet.at>

	* POTFILES.in: added src/arch/unix/x11/gnome/uinetplay.c 

2005-12-23  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* nl.po: Updated the dutch translations.

2005-12-18  Marco van den Heuvel  <blackystardust68@yahoo.com>
